JDK-8013117 : Thread-local trace_buffer has wrong type and name
  • Type: Bug
  • Component: hotspot
  • Sub-Component: svc
  • Affected Version: hs24
  • Priority: P3
  • Status: Resolved
  • Resolution: Fixed
  • Submitted: 2013-04-24
  • Updated: 2013-06-26
  • Resolved: 2013-04-30
The Version table provides details related to the release that this issue/RFE will be addressed.

Unresolved : Release in which this issue/RFE will be addressed.
Resolved: Release in which this issue/RFE has been resolved.
Fixed : Release in which this issue/RFE has been fixed. The release containing this fix may be available for download as an Early Access Release or a General Availability Release.

To download the current JDK release, click here.
JDK 7 Other
7u40Fixed hs24Fixed
Description
The variable _trace_buffer inside Thread is inflexible the way it is currently implemented.