8013117: Thread-local trace_buffer has wrong type and name Reviewed-by: dholmes, sla